[WIP] fix layout components and page issues

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,97 +4,6 @@
 @import "partial/text";
 @import "partial/icon";
 @import "partial/grid";
+@import "./animation";
 
-// init
-$blue: #5cb8e6;
-$red: #e67373;
-$green: #52cc8f;
-$yellow: #fad464;
-$orange: #f19e59;
-$purple: #6626af;
-$purple-light: #926dbd;
-$purple-lighter: #efe9f7;
-$purple-dark: #5f3a8a;
-$grey: #cccccc;
-$grey-light: #d6cfde;
-
-$sub-nav-color: #160029;
-$id-color: #127db3;
-$link-color: #6c2db5;
-$title-color: #300E56;
-$text-color: #333333;
-$second-text-color: #666666;
-$third-text-color: #7749ac;
-$placeholder-color: #c1c1c1;
-$grey-word: #a6a1ab;
-$grey-time: #9b9b9b;
-$purple-name: #9d80bf;
-$purple-word: #1c062f;
-
-$background-color: #f6f6f8;
-$background-color-lighter: #ffffff;
-$th-background-color: #efe9f7;
-$li-bg:#f5f7fa;
-$li-hover-bg: rgba(213, 218, 229, 0.15);
-$link-hover: #7a2ac0;
-$tr-hover-bg: rgba(213, 218, 229, 0.15);
-$body-bg: #f5f6f7;
-$delete-btn: #ac4949;
-
-$family-sans-serif: "Roboto", "PingFang SC", "Lantinghei SC", "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", 微软雅黑, STHeitiSC-Light, simsun, 宋体, "WenQuanYi Zen Hei", "WenQuanYi Micro Hei", sans-serif;
-$family-monospace: Inconsolata,Consolas,Monaco,monospace;
-$body-size: 14px;
-
-// home
-$layout-margin: 156px;
-
-// Override
-$primary: $purple;
-$info: $blue;
-$danger: $red;
-$warning: $yellow;
-$success: $green;
-
-$family-primary: $family-sans-serif;
-$body-background-color: $background-color;
-
-$size-small: 12px;
-$size-normal: 14px;
-$size-medium: 16px; // 中号字体
-$size-large: 28px;
-
-$border-lighter: #e7e7e7;
-$border-light: #c9bed6;
-$border: $border-lighter;
-$border-dark: #7749AC;
-$border-gray: #e4ebf1;
-$border-gray-li: #e6ecf2;
-
-// Animation
-$transition-speed: .3s;
-
-$content-width: 1128px;
-$nav-width: 192px;
-$header-height: 48px;
-$tabNavs-height: 48px;
-$banner-height: 400px;
-$footer-height: 64px;
-$base-margin: 24px;
-$card-width: 264px;
-
-$app-card-width: 264px;
-$app-card-height: 207px;
-
-$page-bottom: 48px;
-$main-height: calc(100vh - #{$footer-height});
-
-$login-bg: linear-gradient(to left, #794db3, #854fb9 32%, #484999);
-$login-form-bg: #ffffff;
-$login-form-shadow: 0 4px 35px 0 rgba(48, 14, 86, 0.3);
-$login-submit-bg: linear-gradient(to left, #f0ab0d, #e68b22);
-$login-submit-hover-bg: linear-gradient(to left, #f0ab0d, #e68b22);
-$login-submit-active-bg: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), linear-gradient(to left, #f0ab0d, #e68b22);
-$login-placeholder: #c9bed6;
-
-$logo-width: 142px;
-$logo-height: 21px;
+@import "./mixins";
