--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -1,5 +1,13 @@
 @import '~scss/vars';
 
+$login-bg: linear-gradient(to left, #794db3, #854fb9 32%, #484999);
+$login-form-bg: #ffffff;
+$login-form-shadow: 0 4px 35px 0 rgba(48, 14, 86, 0.3);
+$login-submit-bg: linear-gradient(to left, #f0ab0d, #e68b22);
+$login-submit-hover-bg: linear-gradient(to left, #f0ab0d, #e68b22);
+$login-submit-active-bg: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), linear-gradient(to left, #f0ab0d, #e68b22);
+$login-placeholder: #c9bed6;
+
 $input-item-width: 320px;
 $input-item-height: 48px;
 
