--- a/src/scss/partial/_icon.scss
+++ b/src/scss/partial/_icon.scss
@@ -2,8 +2,8 @@
   $icon-prefix: qicon;
 
   .#{$icon-prefix}-light {
-    --primary-color: #fff;
-    --secondary-color: #fff;
+    --primary-color: #6D35C3;
+    --secondary-color: #D3C4ED;
     --primary-opacity: 0.9;
     --secondary-opacity: 0.4;
   }
