--- a/src/components/TagShow/index.scss
+++ b/src/components/TagShow/index.scss
@@ -5,23 +5,24 @@
   margin-right: 15px;
   .inner{
     display: inline-block;
-    line-height: 13px;
     height: 20px;
-    border-radius: 1px;
-    border: 1px solid #f5c414;
-    background: #fff;
-    color: #8a6700;
     font-size: 12px;
+    line-height: 1.0;
+    border-radius: 9.5px;
+    background-color: $N0;
+    border: solid 1px $Y45;
+    color: $Y500;
   }
   .name{
     display: inline-block;
-    padding: 3px 4px;
+    padding: 3px 5px 3px 12px;
     overflow: auto;
   }
   .content{
     display: inline-block;
-    padding: 3px 4px;
-    background: #f2d054;
+    padding: 3px 12px 3px 5px;
+    background-color: $Y45;
+    border-radius: 0 9.5px 9.5px 0;
     max-width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -37,20 +38,20 @@
     }
   }
   .inner{
-    border: 1px solid #e2d0f2;
-    color: #7749ac;
+    border: solid 1px $P30;
+    color: $P100;
     margin-bottom: 10px;
   }
   .content{
-    background: #e2d0f2;
+    background-color: $P30;
   }
 }
 .purple2{
   .inner{
-    border: 1px solid #e2d0f2;
-    color: #7749ac;
+    border: solid 1px $P30;
+    color: $P100;
   }
   .content{
-    background: #e2d0f2;
+    background-color: $P30;
   }
 }
