--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -53,9 +53,9 @@ $input-item-height: 48px;
     //}
     :global {
       .icon {
-        position: relative;
+       /* position: relative;
         left: 20px;
-        top: 40px;
+        top: 40px;*/
         opacity: .5;
       }
     }
