--- a/src/components/Base/Input/index.scss
+++ b/src/components/Base/Input/index.scss
@@ -26,7 +26,7 @@
   position: relative;
 
   :global {
-    .icon-search {
+    .icon {
       position: absolute;
       left: 12px;
       top: 50%;
