--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -16,13 +16,15 @@
      margin: 0;
    }
    .title{
-     .icon {
-       //float: left;
-       display: inline-block;
-       width: 48px;
-       height: 48px;
-       margin-bottom: 12px;
-       border-radius: 2px;
+     :global {
+       .icon {
+         //float: left;
+         display: inline-block;
+         width: 48px;
+         height: 48px;
+         margin-bottom: 12px;
+         border-radius: 2px;
+       }
      }
      .name{
        line-height: 16px;
@@ -59,10 +61,12 @@
   text-align: left;
   position: relative;
   .title{
-    .icon {
-      float: left;
-      width: 36px;
-      height: 36px;
+    :global{
+      .icon {
+        float: left;
+        width: 36px;
+        height: 36px;
+      }
     }
     .name {
       margin-left: 48px;
