--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -117,13 +117,22 @@
     margin-bottom: 24px;
     .operation{
       position: absolute;
-      right: -35px;
+      right: 24px;
       top: 24px;
-      width: 135px;
+      width: 40px;
+      height: 32px;
+      border-radius: 2px;
+      background-color: $N0;
+      border: solid 1px $N0;
       text-align: center;
       cursor: pointer;
-      i{
-        transform: rotate(90deg);
+      &:hover{
+        box-shadow: 0 1px 2px 0 rgba(52, 57, 69, 0.08);
+        border: solid 1px $N30;
+      }
+      .icon{
+        margin-top: 7px;
+        margin-right: 20px;
       }
     }
   }
