--- a/src/pages/AppDetail/index.scss
+++ b/src/pages/AppDetail/index.scss
@@ -20,12 +20,14 @@
   .titleOuter{
     padding-bottom: 24px;
     border-bottom: 1px solid $N10;
-    .icon {
-      float: left;
-      width: 48px;
-      height: 48px;
-      margin-right: 16px;
-      border-radius: 24px;
+    :global{
+      .icon {
+        float: left;
+        width: 48px;
+        height: 48px;
+        margin-right: 16px;
+        border-radius: 24px;
+      }
     }
     .title {
       margin-bottom: 8px;
