- fix table status filiter style bug - add no data table style

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -37,7 +37,7 @@
     :global{
       .formContent{
         margin: 12px 0 -18px;
-        .inputItem{
+        & > div, .inputItem{
           margin-bottom: 24px;
           & > label{
             display: inline-block;
