--- a/src/components/Base/Checkbox/index.scss
+++ b/src/components/Base/Checkbox/index.scss
@@ -20,7 +20,7 @@
     user-select: none;
     outline: none;
   }
-  
+
   :global {
     .icon {
       display: none;
@@ -37,7 +37,7 @@
   &::before {
     content: "";
     position: absolute;
-    left: 0;
+    left: 1px;
     top: 50%;
     z-index: 2;
     width: 14px;
@@ -54,8 +54,9 @@
 
   &.checked {
     &::before {
-      background-color: $third-text-color;
-      border-color: $third-text-color; 
+      //border-radius: 2px;
+      border-color: $P75;
+      background-color: $P75;
     }
     :global {
       .icon {
