--- a/src/components/Base/Tooltip/index.scss
+++ b/src/components/Base/Tooltip/index.scss
@@ -6,11 +6,21 @@ $bgcolor: $text-color;
 }
 
 .target {
+  width: 40px;
+  height: 30px;
+  border-radius: 2px;
+  //background-color: $N0;
+  border: solid 1px $N0;
   cursor: pointer;
+  &:hover{
+    box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
+    border: solid 1px $N30;
+  }
   :global{
-    .icon{
-      margin-left: 12px;
-      font-size: 12px;
+    .icon-more{
+      position: relative;
+      top: 6px;
+      left: 12px;
     }
   }
 }
