--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -7,29 +7,29 @@
 .icon {
   display: inline-block;
   vertical-align: top;
-  width: 14px;
-  height: 14px;
-  margin: 1px 8px 0 0;
+  width: 12px;
+  height: 12px;
+  margin: 2px 4px 0 0;
   border-radius: 50%;
   font-style: normal;
 
   &.pending {
-    background-color: $blue;
+    background-color: $B75;
   }
   &.ceased {
-    background-color: $red;
+    background-color: $Y100;
   }
   &.stopped {
-    background-color: $yellow;
+    background-color: $N30;
   }
   &.suspended {
-    background-color: $grey;
+    background-color: $Y100;
   }
   &.active {
-    background-color: $green;
+    background-color: $G75;
   }
   &.deleted {
-    background-color: $orange;
+    background-color: $R300;
   }
 }
 
