--- a/src/components/TagNav/index.scss
+++ b/src/components/TagNav/index.scss
@@ -1,11 +1,13 @@
 @import "~scss/vars";
 
 .tagNav {
-  margin: -16px -24px 24px;
+  //margin: -16px -24px 24px;
+
   padding: 0 24px;
   height: 48px;
-  background: #fff;
+  background: $N0;
   border-bottom: 1px solid #e2d0f2;
+
   .tag{
     display: inline-block;
     padding: 15px 0;
