--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -7,14 +7,9 @@
   color: $N500;
 }
 
-
 .activities{
-  margin: 24px 0;
-  width: 360px;
-  padding: 24px;
-  border-radius: 3px;
-  background-color: #ffffff;
-  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  //margin: 24px 0;
+
   .title{
     margin-bottom: 20px;
     line-height: 19px;
