--- a/src/pages/Admin/Repos/index.scss
+++ b/src/pages/Admin/Repos/index.scss
@@ -5,7 +5,7 @@
   font-size: 20px;
   font-weight: 500;
   text-align: left;
-  color: $title-color;
+  color: $N500;
 }
 .container {
   width: $content-width;
@@ -17,7 +17,7 @@
   .search {
     display: inline-block;
     width: 337px;
-    border-color: $border-lighter;
+    border-color: $N10;
     box-shadow: none;
     :global {
       .fa {
