--- a/src/components/Layout/Admin/CreateResource/index.scss
+++ b/src/components/Layout/Admin/CreateResource/index.scss
@@ -3,33 +3,32 @@
 .wrapper{
   margin: 0 auto 24px;
   width: $content-width;
-
   .leftInfo{
-    border-radius: 2px;
+    border-radius: 3px;
     background-color: $N0;
-    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.07);
+    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
     .title{
-      padding: 15px 24px 18px;
-      line-height: 24px;
+      padding: 20px 32px;
       font-size: 20px;
-      color: $title-color;
-      border-bottom: 1px solid #dadcde;
+      font-weight: 500;
+      line-height: 1.2;
+      color: $N500;
+      border-bottom: 1px solid $N10;
     }
   }
 
   .rightInfo{
     .title{
-      margin-bottom: 20px;
-      line-height: 24px;
-      font-family: Roboto;
+      margin-bottom: 24px;
+      font-size: 20px;
       font-weight: 500;
-      color: #300e56;
+      line-height: 1.2;
+      color: $N500;
     }
     .content{
       font-size: 14px;
-      line-height: 1.43;
-      text-align: left;
-      color: #4c4752;
+      line-height: 1.71;
+      color: $N300;
       p{
         margin-bottom: 20px;
       }
