--- a/src/components/Statistics/Histogram/index.scss
+++ b/src/components/Statistics/Histogram/index.scss
@@ -3,15 +3,17 @@
 .histogram{
   float: right;
   display: inline-block;
-  margin-right: 36px;
   .column{
     position: relative;
     display: inline-block;
     height: 60px;
     width: 4px;
     margin-right: 8px;
-    background: $background-color;
+    background: $N10;
     cursor: pointer;
+    &:last-child{
+      margin-right: 0;
+    }
     &:hover .tips{
       display: inline-block;
     }
@@ -21,7 +23,7 @@
       left: 0;
       width: 4px;
       height: 0;
-      background: #9a5cd1;
+      background-color: $P75;
     }
     .tips{
       position: absolute;
@@ -33,13 +35,13 @@
       height: 50px;
       padding: 8px 12px 10px;
       border-radius: 2px;
-      background-color: #301255;
-      box-shadow: 0 2px 4px 0 rgba(48, 14, 86, 0.32);
+      background-color: $N500;
+      box-shadow: 0 2px 4px 0 rgba(71, 78, 93, 0.2);
       .arrow{
         position: absolute;
         bottom: -6px;
         left: 10px;
-        border-top: 6px solid #301255;
+        border-top: 6px solid $N500;
         border-left: 4px solid transparent;
         border-right: 4px solid transparent;
       }
@@ -48,16 +50,14 @@
         line-height: 14px;
         font-size: 12px;
         font-weight: 500;
-        color: #ffffff;
+        color: $N0;
       }
       .date{
         max-width: 90px;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap ;
         line-height: 14px;
         font-size: 12px;
-        color: #bfb3cd;
+        color: $N65;
+        @include textCut;
       }
     }
   }
