--- a/src/pages/Admin/Apps/Deploy/index.scss
+++ b/src/pages/Admin/Apps/Deploy/index.scss
@@ -15,12 +15,15 @@
 
 form.createForm {
   display: block;
-  margin: -20px 0 20px 24px;
+  padding: 36px 0 0 36px;
   .moduleTitle{
-    margin: 50px 0 25px 0;
+    margin: 48px 0 24px 0;
     font-size: 16px;
     font-weight: bold;
-    color: $title-color;
+    color: $N500;
+    &:first-child{
+      margin-top: 0;
+    }
   }
   .cellModule{
     margin-bottom: 18px;
@@ -28,17 +31,16 @@ form.createForm {
   }
   .name{
     display: inline-block;
-    float: left;
-    margin-right: 16px;
-    width: 130px;
+    margin-right: 24px;
+    width: 168px;
+    line-height: 16px;
     font-size: 14px;
-    line-height: 32px;
-    font-weight: bold;
-    color: $title-color;
+    font-weight: 500;
+    color: $N500;
     text-align: right;
   }
   .showWord{
-    width: 540px;
+    width: 510px;
     line-height: 32px;
   }
 
@@ -50,20 +52,27 @@ form.createForm {
     font-weight: bold;
   }
   .select{
-    width: 276px;
-    margin-right: 10px;
+    width: 256px;
+    margin-right: 12px;
   }
   .textarea{
+    box-sizing: border-box;
     padding: 7px 10px;
-    width: 442px;
+    width: 400px;
     height: 88px;
     border-radius: 2px;
-    border: 1px solid #e7e7e7;
+    background-color: $N0;
+    border: 1px solid $N30;
     outline: none;
     resize: none;
     &:focus{
-      border: 1px solid $border-dark;
+      box-shadow: 0 1px 2px 0 rgba(109, 53, 195, 0.15);
+      border: solid 1px $P75;
     }
+  }
+  .textareaName{
+    position: relative;
+    bottom: 70px;
   }
 
   .rightShow{
@@ -72,12 +81,13 @@ form.createForm {
   }
   .note{
     font-size: 12px;
-    color: #626466;
+    color: $N100;
   }
   .submitBtnGroup{
-    padding: 24px 0 8.5px 146px;
+    margin: 0 -32px;
+    padding: 16px 0 16px 224px;
+    border-top: 1px solid $N10;
     margin-bottom: 0;
-    border-top: 1px solid #dadcde;
     button{
       margin-right: 12px;
     }
