--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -132,4 +132,8 @@
     transform: translateY(-50%) scale(0.6);
     cursor: pointer;
   }
+  .w-time{
+    font-size: 12px;
+    color: $N100;
+  }
 }
